# embi-ecosystem

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/00_Launcher/: main.cpp
applications/00_Launcher/qml/: AM00_Launcher.qml  AW00_Launcher.qml
applications/01_Gallery/: CMakeLists.txt  main.cpp
applications/01_Gallery/qml/: AM01_Gallery.qml  AW01_Gallery.qml  B01_Gallery.qml
applications/01_Gallery/qml/components/: Categorizer.qml  Colors.qml  Fonts.qml  Icons.qml  Placeholder.qml  Typos.qml
applications/01_Gallery/qml/models/: Form_DemoModel.qml
applications/01_Gallery/src/: A01_GalleryManager.cpp  A01_GalleryManager.h  Gallery.cpp  Gallery.h
applications/02_Clock/: CMakeLists.txt  main.cpp
applications/02_Clock/qml/: AM02_Clock.qml  AW02_Clock.qml
applications/02_Clock/qml/components/: BarInfoIcons.qml  TopBarInfo.qml
applications/02_Clock/qml/containers/: ClockSettingsView.qml
applications/02_Clock/qml/models/: Settings_Clock_Machine.qml
applications/02_Clock/qml/preparators/: ClockApiAlarmRouter.qml  ClockApiPreparator.qml
applications/02_Clock/src/: A02_ClockManager.cpp  A02_ClockManager.h  Clock.cpp  Clock.h  ClockApi.cpp  ClockApi.h  ClockDisplay.cpp  ClockDisplay.h  ClockMedia.cpp  ClockMedia.h
cmake/: CreateDebPackage.cmake
libraries/Tier2/: CMakeLists.txt
libraries/Tier2/Rest/: CMakeLists.txt  README.md  Rest
libraries/Tier2/Sql/: CMakeLists.txt  README.md  Sql
libraries/Tier3/: CMakeLists.txt
libraries/Tier3/Database/: CMakeLists.txt  Database  README.md
libraries/Tier3/Happy/: CMakeLists.txt  Happy  README.md
libraries/Tier3/Media/: CMakeLists.txt  Media  README.md
libraries/Tier3/Postman/: CMakeLists.txt  Postman  README.md
libraries/Tier3/System/: CMakeLists.txt
(+238 files in other folders)
